Bug 405423 - Can't change default search engine
Summary: Can't change default search engine
Status: RESOLVED FIXED
Alias: None
Product: Falkon
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.1.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: David Rosca
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-03-13 09:09 UTC by Anders Lund
Modified: 2023-04-09 11:15 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 23.04.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Anders Lund 2019-03-13 09:09:23 UTC
SUMMARY
I tried to change the default search engine, but it did not take effect until I removed the former default search engine.

STEPS TO REPRODUCE
1. 
2. 
3. 

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
MacOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 David Rosca 2019-03-14 09:36:18 UTC
Address bar by default follows search engines set in web search bar. To change this behavior, check Preferences -> Tabs -> Address Bar -> Search with Default Engine.
Comment 2 Anders Lund 2019-03-14 10:29:32 UTC
torsdag den 14. marts 2019 10.36.18 CET skrev du:
> https://bugs.kde.org/show_bug.cgi?id=405423
> 
> --- Comment #1 from David Rosca <nowrep@gmail.com> ---
> Address bar by default follows search engines set in web search bar. To
> change this behavior, check Preferences -> Tabs -> Address Bar -> Search
> with Default Engine.

Yes, but it does not appear to work. In one window, if I set the default 
search engine in preferences, it still searches with the "old" engine. The 
window is private, maybe that influences things?
Comment 3 David Rosca 2019-03-14 10:31:53 UTC
Yes, private windows have temporary read-only settings.
Comment 4 Anders Lund 2019-03-14 10:40:53 UTC
torsdag den 14. marts 2019 11.31.53 CET skrev du:
> https://bugs.kde.org/show_bug.cgi?id=405423
> 
> --- Comment #3 from David Rosca <nowrep@gmail.com> ---
> Yes, private windows have temporary read-only settings.

In that case, it would be smart to provide that information, to help the user 
:)

I use mostly private windows, really mostly to protect myself against 
tracking. I only use the default window in cases where the private window does 
not work, a few public websites in DK primarily. For privacy, siloing all 
tabs/windows would be really nice, that is never share cookies/web storage 
between sites, and delete it all at window closedown - but that is probably 
out of topic here :)
Comment 5 Raphael Rosch 2020-01-18 20:11:24 UTC
I can confirm that the problem remains, at least for me on:

FC30 - 32bit
git master as of 2020 Jan 1
QtWebEngine version 5.12.5

I change the default search engine and the order, bringing my new selection to the top of the list of engines, but falkon still insists on using DuckDuckGo. Closing the browser and restarting does not save the changes, and even after I change it and go to the search engine manager again in the same session, and see that my new selection is still selected, the same old selection is what appears on the search box. If I then manually change the selection in the search box, and open a new window, the old search engine appears as the search option again.
Comment 6 Justin Zobel 2021-01-04 02:07:29 UTC
Can confirm on Falkon 3.1.0 WebEngine 5.15.2.

Operating System: Solus 4.1
KDE Plasma Version: 5.20.4
KDE Frameworks Version: 5.77.0
Qt Version: 5.15.2
Kernel Version: 5.10.4-165.current

I set Google as default and even moved it to the top of the list but the (In reply to David Rosca from comment #1)
> Address bar by default follows search engines set in web search bar. To
> change this behavior, check Preferences -> Tabs -> Address Bar -> Search
> with Default Engine.

This should be enabled by default IMHO.
Comment 7 bsduck 2021-07-14 14:05:57 UTC
This should definitely be the default. I don't even understand the option. Why select a default search engine if it's not used? With the current default setting, you can select the default engine from a settings icon showing up under the address bar when typing text, but this setting has no effect.
Comment 8 Raphael Rosch 2021-07-15 07:22:25 UTC
The way I worked around it was to edit it in the source code and compile. If memory serves me right, I offered to look into it, fix it, and contribute the code (among other fixes for bugs that were affecting me -- like tab width size), but I never heard back from David. I eventually ended up no longer using falkon. It's a neat project with lots of potential, though, and am grateful it was available as an option when I needed an alternative.
Comment 9 Juraj 2023-04-09 09:54:28 UTC
Git commit 5dd9599fce270c3621c0c46e6e9062d1ce6af1ef by Juraj Oravec.
Committed on 09/04/2023 at 09:31.
Pushed by jurajo into branch 'release/23.04'.

Addressbar use default search engine by default
FIXED-IN: 23.04.0

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>

M  +1    -0    CHANGELOG
M  +1    -1    src/lib/other/qzsettings.cpp

https://invent.kde.org/network/falkon/commit/5dd9599fce270c3621c0c46e6e9062d1ce6af1ef
Comment 10 Juraj 2023-04-09 09:54:47 UTC
Git commit 5658ed2f143a31dffae203f11e71f05d304e428e by Juraj Oravec.
Committed on 09/04/2023 at 09:30.
Pushed by jurajo into branch 'master'.

Addressbar use default search engine by default
FIXED-IN: 23.04.0

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>

M  +1    -0    CHANGELOG
M  +1    -1    src/lib/other/qzsettings.cpp

https://invent.kde.org/network/falkon/commit/5658ed2f143a31dffae203f11e71f05d304e428e
Comment 11 Graham Perrin 2023-04-09 11:15:58 UTC
(In reply to Juraj from comment #9)

Thank you!