Addressbar use default search engine by default

BUG: 405423
FIXED-IN: 23.04.0

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>